# invoice-orchestrator-platform

./: README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/agents/: agent_comm_pb2.py  agent_comm_pb2_grpc.py
backend/agents/common/: logging_config.py  mcp_client.py
backend/agents/conversion_agent/: Dockerfile  README.md  __init__.py  server.py
backend/agents/extraction_agent/: Dockerfile  README.md  __init__.py  server.py
backend/agents/integration_agent/: Dockerfile  README.md  __init__.py  server.py
backend/agents/mapping_agent/: Dockerfile  README.md  __init__.py  server.py
backend/agents/report_agent/: Dockerfile  README.md  __init__.py  server.py
backend/agents/validation_agent/: Dockerfile  README.md  __init__.py  server.py
backend/gateway/: Dockerfile
backend/gateway/app/: main.py
backend/mcp/: Dockerfile  server.py
backend/mcp/db/: engine.py  models.py  repository.py
backend/mcp/grpc/: __init__.py  mcp_pb2.py  mcp_pb2_grpc.py
backend/mcp/llm/: client.py
backend/orchestrator/: Dockerfile  api.py  service.py
backend/orchestrator/flow/: graph.py
backend/shared/: prompts.py
backend/shared/clients/: agents.py  mcp.py
backend/shared/grpc/: agent_comm_pb2_grpc.py
docs/api/: README.md
docs/db/: ddl.sql  er_diagram.md
docs/frontend/: dashboard_main.md  human_review.md
docs/proto/: agent_comm.proto  mcp.proto
infra/k8s/: deployment.yaml  service.yaml
tests/e2e/: test_full_flow.py
tests/integration/: test_mcp_and_agents.py
tests/unit/: test_conversion_xml_json.py  test_validation_rules.py
(+24 files in other folders)
